--- a/style.css
+++ b/style.css
@@ -81,3 +81,26 @@ footer {
     text-align: center;
     padding: 24px;
 }
+
+.info {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+}
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 48px;
+    font-size: 36px;
+    font-weight: 300;
+    font-style: italic;
+    color: #1f2937;
+    background-color: #e5e7eb;
+}
+
+.quote-author {
+    text-align: right;
+    font-weight: bold;
+}
