--- a/style.css
+++ b/style.css
@@ -4,14 +4,22 @@
     font-family: 'Roboto';
 }
 
+body {
+    margin: 0;
+}
+
 .hero, footer {
-    background-color: #1f2937;
+    background-color: #2c545c;
+}
+
+a:visited {
+    color: #e5e7eb;
 }
 
 .hero-content {
     display: flex;
-    justify-content: space-evenly;
-    padding: 80px;
+    justify-content: space-between;
+    padding: 120px;
 }
 
 .hero-left {
@@ -21,7 +29,7 @@
 .header {
     display: flex;
     justify-content: space-between;
-    padding: 0 24px;
+    padding: 0 120px;
     align-items: center;
 }
 
@@ -56,18 +64,22 @@ nav a:hover {
 }
 
 button {
-    background-color: #3882f6;
+    background-color: #60aeb0;
     font-weight: bold;
     color: #f9faf8;
     border-radius: 6px;
-    border: none;
-    padding: 4px 16px;
+    border: 1px solid transparent;
+    cursor: pointer;
+    text-align: center;
+    padding: 8px 32px;
+    font-size: 16px;
 }
 
 button:hover {
     /*There's probably a better way to darken on hover*/
-    background-color: #0b5ed7;
+    background-color: #359AB7;
     color: #fff;
+    border: 1px solid transparent;
 }
 
 img {
@@ -86,6 +98,26 @@ footer {
     font-size: 36px;
     font-weight: 900;
     color: #1f2937;
+    text-align: center;
+    margin-bottom: 48px;
+    padding:  0 120px;
+}
+
+.figures {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+figure img{
+    border-radius: 24px;
+    width: 268px;
+    height: 268px;
+    border: 5px solid #60aeb0;
+}
+
+figcaption {
+    font-weight: normal;
+    font-size: 18px;
 }
 
 .quote {
@@ -98,9 +130,53 @@ footer {
     font-style: italic;
     color: #1f2937;
     background-color: #e5e7eb;
+    padding:  0 120px;
 }
 
 .quote-author {
     text-align: right;
     font-weight: bold;
+}
+
+.cta-container {
+    padding: 60px 300px;
+}
+
+.cta-container p {
+    text-align: center;
+}
+
+.cta {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #60aeb0;
+    color: #e5e7eb;
+    border-radius: 8px;
+    padding: 2rem;
+}
+
+.cta button a {
+    text-decoration: none;
+}
+
+.cta-txt {
+    display: flex;
+    flex-direction: column;
+}
+
+.cta-btn {
+    border: 2px solid #e5e7eb;
+}
+
+.cta-btn:hover {
+    border: 2px solid #e5e7eb;
+}
+
+.fa-github {
+    color: #fff;
+}
+
+.fa-github:hover {
+    color: #ddd;
 }
